--- a/Pages/ReceivingReports.cshtml
+++ b/Pages/ReceivingReports.cshtml
@@ -145,7 +145,7 @@
                                 <div class="form-group mb-4">
                                     <label>@Model.lblItemGroup</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
                                     <select class="form-select" id="ItemGroup_@i" name="ItemsForReport[@i].ItemGroup" onchange="filterItemByGroup(@i)" >
-                                        <option value="" selected>Select Item Group</option>
+                                        <option value="">Select Item Group</option>
                                         @if (Model.ItemGroupList != null)
                                         {
                                             foreach (var item in Model.ItemGroupList)
