--- a/Pages/EditDisbursement.cshtml
+++ b/Pages/EditDisbursement.cshtml
@@ -240,7 +240,7 @@
                             <div class=" mb-4">
                                 <div class="me-2" >
                                     <label for="WarehouseName">@Model.lblStoreName</label>
-                                    <select class="form-select" id="WarehouseName" asp-for="Report.WarehouseName">
+                                    <select class="form-select" id="WarehouseName" asp-for="Report.WarehouseId">
                                         @if (Model.Stores != null)
                                         {
                                             foreach (var item in Model.Stores)
