--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -357,14 +357,14 @@
                             <div class=" mb-4">
                                 <div class="me-2" >
                                     <label for="WarehouseName">@Model.lblStoreName</label>
-                                    <select class="form-select" id="WarehouseName" asp-for="Report.WarehouseName">
+                                    <select class="form-select" id="WarehouseName" asp-for="Report.WarehouseId">
                                         @if (Model.Stores != null)
                                         {
                                             foreach (var item in Model.Stores)
                                             {
                                                 if (item.IsActive == 1 && item.Ended == null)
                                                 {
-                                                    <option value="@item.StoreName" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>
+                                                    <option value="@item.StoreId" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>
                                                 }
                                             }
                                         }
