--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -539,7 +539,8 @@ document.addEventListener("DOMContentLoaded", function () {
                             {
                             <th scope="col" class="border-0">@Model.lblQuantity</th>
                             }
-                            <th scope="col" class="border-0 rounded-end"></th>
+                            <th scope="col" class="border-0 rounded-end">Action</th>
+                            
                         </tr>
                     </thead>
                     <tbody>
@@ -597,15 +598,15 @@ document.addEventListener("DOMContentLoaded", function () {
                             <form method="post">
                                 <input type="hidden" value="@item.DisbursementRequestId" name="DisbursementID" />
 
-                                <!-- Variables for Breadcrumb Starts -->
+                               
                                 <input type="hidden" value="@Model.CurrentPage" name="page" />
                                 <input type="hidden" value="@Model.RequesterName" name="RequesterName" />
                                 <input type="hidden" value="@Model.FromDate?.ToString("yyyy-MM-dd")" name="FromDate" />
                                 <input type="hidden" value="@Model.ToDate?.ToString("yyyy-MM-dd")" name="ToDate" />
-                                <!-- Variables for Breadcrumb Ends -->
+                                
 
-                                @* <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
-                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /> *@
+                                @* <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" /> 
+                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />*@
                             </form>
                         </td>
                     </tr>
