--- a/Pages/ViewReturnRequests.cshtml
+++ b/Pages/ViewReturnRequests.cshtml
@@ -20,11 +20,14 @@
         </nav>
         <h2 class="h4">@Model.lblDamagedItems</h2>
     </div>
-    <div class="btn-group ms-2 ms-lg-3">
-        <a href="newreturnRequest" class="btn btn-sm d-flex btn-gray-800 justify-content-center top-big-btn d-inline-flex align-items-center">
-            <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">    Return Item Request
-        </a>
-    </div>
+    @if(Model.CanReturnItems){
+        <div class="btn-group ms-2 ms-lg-3">
+            <a href="newreturnRequest" class="btn btn-sm d-flex btn-gray-800 justify-content-center top-big-btn d-inline-flex align-items-center">
+                <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">    Return Item Request
+            </a>
+        </div>
+    }
+    
 </div>
  <div class="card border-0 shadow mb-4">
         <div class="card-body">
