--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -114,6 +114,22 @@
             <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
                 @Model.lblManageUserGroups
             </a>
+            <a href="AddStoreTypes" class="btn justify-content-center top-bigg-btn btn-outline-gray-600 d-inline-flex align-items-center">
+            <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
+                Warehouse type
+            </a>
+            @*<a href="ManageUserGroups" class="btn justify-content-center top-bigg-btn btn-outline-gray-600 d-inline-flex align-items-center">
+            <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
+                Chemical status
+            </a>*@
+            <a href="AddDocumentType" class="btn justify-content-center top-bigg-btn btn-outline-gray-600 d-inline-flex align-items-center">
+            <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
+                Document type
+            </a>
+            <a href="AddPrivileges" class="btn justify-content-center top-bigg-btn btn-outline-gray-600 d-inline-flex align-items-center">
+            <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/manage-b.png">
+                Add Privilege
+            </a>
 
         </div>
     </div>
