--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -19,11 +19,10 @@
             </nav>
 
             <h2 class="h4">@Model.lblRequests</h2>
-    using LabMaterials.Migrations;
         </div>
 
         
-        @if (Model.CanManageRequests)
+        @if (Model.CanGenerateReceivingRequest)
         {
             <div class="btn-toolbar mb-2 mb-md-0">
                 <a href="ReceivingReports" class="btn btn-sm justify-content-center btn-gray-800 mx-2 d-inline-flex align-items-center">
@@ -57,7 +56,7 @@
             
         </a>
         
-        @if (Model.UserGroupName == "Warehouse Keeper" || Model.UserGroupName == "Warehouse Manager")
+        @if (Model.UserGroupName == "Warehouse Keeper" || Model.UserGroupName == "Warehouse Manager" || Model.UserGroupName == "Sector Manager")
         {
             <a class="nav-link @Model.outboxClass border border-bottom-0" href="?type=outbox">Request Sent</a>
         }
@@ -218,7 +217,7 @@
                                                             <button asp-page-handler="DeductOrder" class="btn btn-info btn-sm p-1"> Deduct Order form Item Card</button>
                                                         </form>
 
-                                                        <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.ReportId, @inbox.Id,'@inbox.ReportType')">Comment & Reject</button>
+                                                        @* <button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.ReportId, @inbox.Id,'@inbox.ReportType')">Comment & Reject</button> *@
                                                     }
                                                     
                                                 }
@@ -236,6 +235,20 @@
                                                     }
                                                     @* case2: Sender- Warehouse Manager receiver:  Inspection Officer *@
                                                     else if(senderGroupName == "Warehouse Manager" && Model.UserGroupName == "Return Inspection Committee Officer"){
+                                                        <form method="post" class="d-inline">
+                                                            <input type="hidden" name="ReturnRequestId" value="@inbox.ReturnRequestId">
+                                                            <button class="btn btn-info btn-sm p-1" asp-page-handler="Recommendations" >
+                                                                Add Committee Recommendations
+                                                            </button>
+                                                        </form>
+                                                        
+
+                                                        <button class="btn btn-warning btn-sm p-1" data-toggle="modal" data-target="#commentRejectModal" onclick="setRejectReportId(@inbox.ReturnRequestId, @inbox.Id,'@inbox.ReportType')">
+                                                            Comment & Reject
+                                                        </button>
+                                                    }
+                                                    @* case3: Sender- Inspection Committee Officer receiver:  Supervisor *@
+                                                    else if(senderGroupName == "Return Inspection Committee Officer" && Model.UserGroupName == "General Supervisor"){
                                                         <button class="btn btn-info btn-sm p-1" data-toggle="modal"  onclick="setAcceptReturnReportId(@inbox.ReturnRequestId, @inbox.Id)">
                                                             Add Committee Recommendations
                                                         </button>
@@ -247,9 +260,15 @@
                                                 }
                                                 
                                             }
-                                            else if(inbox.Type == "Assign Supervisor")
+                                            else if(inbox.Type == "Assign Supervisor" && inbox.ReportType == "Dispensing")
                                             {
                                                 <button class="btn btn-info btn-sm p-1" data-toggle="modal" data-target="#specifyRecipientDispensing" onclick="setAcceptReportId(@inbox.MaterialRequestId, @inbox.Id)">
+                                                      Assign Supervisor
+                                                </button>
+                                            }
+                                            else if(inbox.Type == "Assign Supervisor" && inbox.ReportType == "ReturnItems")
+                                            {
+                                                <button class="btn btn-info btn-sm p-1" data-toggle="modal" data-target="#specifyRecipientReturn" onclick="setAcceptReturnReportId(@inbox.ReturnRequestId, @inbox.Id)">
                                                       Assign Supervisor
                                                 </button>
                                             }
@@ -305,49 +324,81 @@
                         }
                         else{
                             if(Model.UserGroupName == "Warehouse Keeper"){
-                                @foreach (var req in Model.RequestSent){
-                                    var ReceivingWarehouse = Model.Warehouses.FirstOrDefault(s => s.StoreId == int.Parse(req.ReceivingWarehouse))?.   StoreName ?? "";
-                                    <tr>
-                                        <td>Request for Warehouse <b>@ReceivingWarehouse</b> has been sent successfully.</td>
-                                        @{
-                                            var localTime = req.CreatedAt.ToLocalTime();
-                                        }
-                                        <td>@localTime</td>
-                                        @* <td>@req.CreatedAt</td> *@
-                                        <td>
-                                            @* <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /><a asp-page="/ViewReceivingReport"  class="btn btn-info btn-sm">View</a> *@
-                                            <form method="post">
-                                                <input type="hidden" value="@req.Id" name="InboxId" />
-                                                 <input type="hidden" value="Receiving" name="ReportType" />
-                                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
-                                            </form>
-                                        
-                                        </td>
-                                    </tr>
+                                if(Model.RequestSent != null) {
+                                    @foreach (var req in Model.RequestSent){
+                                        var ReceivingWarehouse = Model.Warehouses.FirstOrDefault(s => s.StoreId == int.Parse(req.ReceivingWarehouse))?.   StoreName ?? "";
+                                        <tr>
+                                            <td>Request for Warehouse <b>@ReceivingWarehouse</b> has been sent successfully.</td>
+                                            @{
+                                                var localTime = req.CreatedAt.ToLocalTime();
+                                            }
+                                            <td>@localTime</td>
+                                            @* <td>@req.CreatedAt</td> *@
+                                            <td>
+                                                @* <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /><a asp-page="/ViewReceivingReport"  class="btn btn-info btn-sm">View</a> *@
+                                                <form method="post">
+                                                    <input type="hidden" value="@req.Id" name="InboxId" />
+                                                    <input type="hidden" value="Receiving" name="ReportType" />
+                                                    <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
+                                                </form>
+                                            
+                                            </td>
+                                        </tr>
+                                    }
                                 }
+                                
                             }
                             else if (Model.UserGroupName == "Warehouse Manager"){
-                                @foreach (var req in Model.ManagerRequestSent){
-                                    var StoreName = Model.Stores.FirstOrDefault(i => i.StoreId == req.WarehouseId)?.StoreName ?? "";
-                                    
-                                    <tr>
-                                        <td>Dispensing Request for <b>@StoreName</b> has been sent successfully.</td>
-                                        @{
-                                            var localTime = req.OrderDate.ToLocalTime();
-                                        }
-                                        <td>@localTime</td>
-                                        @* <td>@req.CreatedAt</td> *@
-                                        <td>
-                                          
-                                            <form method="post">
-                                                <input type="hidden" value="@req.RequestId" name="MaterialRequestId" />
-                                                <input type="hidden" value="Dispensing" name="ReportType" />
+                                if(Model.ManagerRequestSent != null){
 
-                                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
-                                            </form>
+                                    @foreach (var req in Model.ManagerRequestSent){
+                                        var StoreName = Model.Stores.FirstOrDefault(i => i.StoreId == req.WarehouseId)?.StoreName ?? "";
                                         
-                                        </td>
-                                    </tr>
+                                        <tr>
+                                            <td>Dispensing Request for <b>@StoreName</b> has been sent successfully.</td>
+                                            @{
+                                                var localTime = req.OrderDate.ToLocalTime();
+                                            }
+                                            <td>@localTime</td>
+                                            @* <td>@req.CreatedAt</td> *@
+                                            <td>
+                                            
+                                                <form method="post">
+                                                    <input type="hidden" value="@req.RequestId" name="RequestReportId" />
+                                                    <input type="hidden" value="Dispensing" name="ReportType" />
+
+                                                    <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
+                                                </form>
+                                            
+                                            </td>
+                                        </tr>
+                                    }
+                                }
+                            }
+                            else if(Model.UserGroupName == "Sector Manager"){
+                                if(Model.SectorManagerRequestSent != null){
+                                    @foreach (var req in Model.SectorManagerRequestSent){
+                                        var StoreName = Model.Stores.FirstOrDefault(i => i.StoreId == req.WarehouseId)?.StoreName ?? "";
+                                        
+                                        <tr>
+                                            <td>Returns Item Request for <b>@StoreName</b> has been sent successfully.</td>
+                                            @{
+                                                var localTime = req.OrderDate.ToLocalTime();
+                                            }
+                                            <td>@localTime</td>
+                                            @* <td>@req.CreatedAt</td> *@
+                                            <td>
+                                            
+                                                <form method="post">
+                                                    <input type="hidden" value="@req.Id" name="RequestReportId" />
+                                                    <input type="hidden" value="ReturnItems" name="ReportType" />
+
+                                                    <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
+                                                </form>
+                                            
+                                            </td>
+                                        </tr>
+                                    }
                                 }
                             }
                         }
@@ -463,6 +514,20 @@
                                                     @if (Model.InspectionOfficerList != null)
                                                     {
                                                         foreach (var item in Model.InspectionOfficerList)
+                                                        {
+                                                                <option value="@item.UserId" data-UserName="@item.FullName">@item.FullName</option>
+                                                        }
+                                                    }
+                                                </select>
+                                            }
+                                            else if(Model.UserGroupName == "Return Inspection Committee Officer"){
+                                                <label for="Receipient">Returns Inspection Committee Officer</label>
+                                                <select class="form-select"  id="Receipient" name="Receipient" required>
+                                        
+                                                    <option value="">Select Supervisor</option>
+                                                    @if (Model.SupervisorList != null)
+                                                    {
+                                                        foreach (var item in Model.SupervisorList)
                                                         {
                                                                 <option value="@item.UserId" data-UserName="@item.FullName">@item.FullName</option>
                                                         }
