--- a/Pages/HazardTypes/Index.cshtml
+++ b/Pages/HazardTypes/Index.cshtml
@@ -45,9 +45,17 @@
                         <tr>
                             <td>@item.HazardTypeName</td>
                             <td>
-                                <a asp-page="./Edit" asp-route-id="@item.HazardTypeName">Edit</a> |
-                                <a asp-page="./Details" asp-route-id="@item.HazardTypeName">Details</a> |
-                                <a asp-page="./Delete" asp-route-id="@item.HazardTypeName">Delete</a>
+                                <div class="btn-toolbar mb-2 mb-md-0 d-flex flex-wrap">
+                                    <div class="btn-group d-flex mx-3 ms-lg-3">
+                                        <a asp-page="./Edit" asp-route-id="@item.HazardTypeName" class="btn btn-primary">Edit</a>
+                                    </div>
+                                    <div class="btn-group d-flex mx-3 ms-lg-3">
+                                        <a asp-page="./Details" asp-route-id="@item.HazardTypeName" class="btn btn-secondary">Details</a>
+                                    </div>
+                                    <div class="btn-group d-flex mx-3 ms-lg-3">
+                                        <a asp-page="./Delete" asp-route-id="@item.HazardTypeName" class="btn btn-danger">Delete</a>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                     }
