--- a/Pages/HazardTypes/Delete.cshtml
+++ b/Pages/HazardTypes/Delete.cshtml
@@ -9,14 +9,22 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>HazardType</h4>
-    <hr />
-    <dl class="row">
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="HazardType.HazardTypeName" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card border-0 shadow mb-4">
+                <div class="card-body">
+                    <h4>HazardType</h4>
+                    <hr />
+                    <dl class="row">
+                    </dl>
+
+                    <form method="post">
+                        <input readonly asp-for="HazardType.HazardTypeName" />
+                        <input type="submit" value="Delete" class="btn btn-danger" /> |
+                        <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
