--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -113,36 +113,36 @@
             </div>
 
             <div class="btn-group d-flex mx-3 ms-lg-3">
-                <a href="ManageUserGroups" class="btn btn-outline-primary d-inline-flex align-items-center justify-content-center">
-                    <img class="icon icon-xs me-2" src="images/manage-b.png" alt="Manage Groups">
+                <a href="ManageUserGroups" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
+                    <img class="icon icon-xs me-2" src="images/plus.png" alt="Manage Groups">
                     @Model.lblManageUserGroups
                 </a>
             </div>
 
             <div class="btn-group d-flex mx-3 ms-lg-3">
-                <a href="ViewStoreTypes" class="btn btn-outline-primary d-inline-flex align-items-center justify-content-center">
-                    <img class="icon icon-xs me-2" src="images/manage-b.png" alt="Warehouse Type">
+                <a href="ViewStoreTypes" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
+                    <img class="icon icon-xs me-2" src="images/plus.png" alt="Warehouse Type">
                     Warehouse type
                 </a>
             </div>
 
             <div class="btn-group d-flex mx-3 ms-lg-3">
-                <a href="ViewDoctypes" class="btn btn-outline-primary d-inline-flex align-items-center justify-content-center">
-                    <img class="icon icon-xs me-2" src="images/manage-b.png" alt="Document Type">
+                <a href="ViewDoctypes" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
+                    <img class="icon icon-xs me-2" src="images/plus.png" alt="Document Type">
                     Document type
                 </a>
             </div>
 
             <div class="btn-group d-flex mx-3 ms-lg-3">
-                <a href="ViewPrivileges" class="btn btn-outline-primary d-inline-flex align-items-center justify-content-center">
-                    <img class="icon icon-xs me-2" src="images/manage-b.png" alt="Add Privilege">
+                <a href="ViewPrivileges" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
+                    <img class="icon icon-xs me-2" src="images/plus.png" alt="Add Privilege">
                     Add Privilege
                 </a>
             </div>
 
             <div class="btn-group d-flex mx-3 ms-lg-3">
-                <a href="HazardTypes/Index" class="btn btn-outline-primary d-inline-flex align-items-center justify-content-center">
-                    <img class="icon icon-xs me-2" src="images/manage-b.png" alt="Add Privilege">
+                <a href="HazardTypes/Index" class="btn btn-primary d-inline-flex align-items-center justify-content-center">
+                    <img class="icon icon-xs me-2" src="images/plus.png" alt="Add Privilege">
                     Add HazardTypes
                 </a>
             </div>
